--- a/shop-online/web-spa-business/src/app/warehouse/import/import.html
+++ b/shop-online/web-spa-business/src/app/warehouse/import/import.html
@@ -20,7 +20,7 @@
     <!-- dialog -->
     <dialog-cmp [info]="dialogInfo">
         <dialog-header-cmp [info]="dialogInfo" (onClose)="onDialogClose()">Nhap kho</dialog-header-cmp>
-        <dialog-body-cmp [info]="dialogInfo">
+        <dialog-body-cmp>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label>So phieu</label>
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </dialog-body-cmp>
-        <dialog-footer-cmp [info]="dialogInfo">
+        <dialog-footer-cmp>
             <button (click)="onSave()" class="btn btn-primary"><i class="glyphicon glyphicon-floppy-disk"></i></button>
         </dialog-footer-cmp>
     </dialog-cmp>
