--- a/shop-online/web-spa-business/src/app/product/detail/detail.html
+++ b/shop-online/web-spa-business/src/app/product/detail/detail.html
@@ -29,7 +29,7 @@
                 <!--<form-field-cmp [info]="formInfo.getField('image')" [fieldModel]="formInfo.model.image">
                     <input class="form-control" [(ngModel)]="formInfo.model.image" name="image">
                 </form-field-cmp>-->
-                <radio-field-cmp [info]="formInfo.getField('unit')" [(fieldModel)]="formInfo.model.unit"></radio-field-cmp>
+                <cmb-field-cmp [info]="formInfo.getField('unit')" [(fieldModel)]="formInfo.model.unit"></cmb-field-cmp>
 <!--
                 <form-field-cmp [info]="formInfo.getField('unit')" [fieldModel]="formInfo.model.unit">
                     <input class="form-control" [(ngModel)]="formInfo.model.unit" name="unit">
