--- a/shop-online/web-spa-business/src/app/shared/form/field/number.html
+++ b/shop-online/web-spa-business/src/app/shared/form/field/number.html
@@ -1,3 +1,3 @@
 <form-field-cmp [info]="info" [fieldModel]="fieldModel">
-    <input class="form-control" onClick="this.select();" [ngModel]="fieldModel" (ngModelChange)="updateData($event)" name="info.name" [type]="info.type" [min]="info.min" [max]="info.max" [step]="info.step">
+    <input class="form-control" [ngModel]="fieldModel" (ngModelChange)="updateData($event)" name="info.name" [type]="info.type" [min]="info.min" [max]="info.max" [step]="info.step">
 </form-field-cmp>
