--- a/shop-online/web-spa-business/src/app/product/product.html
+++ b/shop-online/web-spa-business/src/app/product/product.html
@@ -17,6 +17,6 @@
         </grid-cmp>
     </div>
     <div class="row">
-        <a class="btn btn-default" (click)="onBack()"><i class="glyphicon glyphicon-arrow-left"></i></a>
+        <a class="btn btn-default" *ngIf="canNavigateBack()" (click)="onBack()"><i class="glyphicon glyphicon-arrow-left"></i></a>
     </div>
 </wrapper>
