--- a/shop-online/web-spa-business/src/app/shared/form/field/combobox.html
+++ b/shop-online/web-spa-business/src/app/shared/form/field/combobox.html
@@ -1,6 +1,6 @@
 <form-field-cmp [info]="info" [fieldModel]="fieldModel">
         <select class="form-control" [ngModel]="fieldModel" (ngModelChange)="updateData($event)">
             <option *ngIf="info.hasBlankItem" value=""></option>
-            <option *ngFor="let item of info.items" [value]="info.getValue(item)">{{info.getLable(item)}}</option>
+            <option *ngFor="let item of info.items" [value]="info.getValue(item)">{{info.getLable(item) | translate}}</option>
         </select>
 </form-field-cmp>
