--- a/shop-online/web-spa-business/src/app/product/group/group.html
+++ b/shop-online/web-spa-business/src/app/product/group/group.html
@@ -2,7 +2,7 @@
     <!-- page header -->
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{ 'product.group.title' | translate}}</h1>
+            <h1 class="page-header">{{ 'product.group.list.title' | translate}}</h1>
         </div>
     </div>
 
@@ -12,11 +12,10 @@
         <grid-cmp [info]="gridInfo" [data-source]="dataSource" (onExecute)="onExecute($event)">
             <grid-action-cmp>
                 <button (click)="onAdd()" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i></button>
-                <button (click)="onNavigate('\product')" type="button" class="btn btn-default">{{'product.title.product' | translate}}</button>
             </grid-action-cmp>
         </grid-cmp>
     </div>
     <div class="row">
-        <a class="btn btn-default" (click)="onBack()"><i class="glyphicon glyphicon-arrow-left"></i></a>
+        <a class="btn btn-default btn-back" (click)="onBack()"><i class="glyphicon glyphicon-arrow-left"></i></a>
     </div>
 </wrapper>
