--- a/shop-online/web-spa-business/src/app/product/prices/prices.html
+++ b/shop-online/web-spa-business/src/app/product/prices/prices.html
@@ -2,7 +2,7 @@
     <!-- page header -->
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{ 'product.list.title' | translate}}</h1>
+            <h1 class="page-header">{{ 'product.prices.title' | translate}}</h1>
         </div>
     </div>
 
@@ -10,9 +10,8 @@
         <alert-cmp [info]="alertInfo"></alert-cmp>
         <grid-cmp [info]="gridInfo" [data-source]="dataSource" (onExecute)="onExecute($event)">
             <grid-action-cmp>
-                <button (click)="onAdd()" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i></button>
-                <button (click)="onNavigate('\product-group')" type="button" class="btn btn-default">{{'product.group' | translate}}</button>
-                <button (click)="onNavigate('\product-prices')" type="button" class="btn btn-default">{{'product.prices' | translate}}</button>
+                <button (click)="onNavigate('\product-group')" type="button" class="btn btn-primary">{{'product.prices.export' | translate}}</button>
+                <button (click)="onNavigate('\product-group')" type="button" class="btn btn-default">{{'product.prices.import' | translate}}</button>
             </grid-action-cmp>
         </grid-cmp>
     </div>
