--- a/shop-online/web-spa-business/src/app/product/product.html
+++ b/shop-online/web-spa-business/src/app/product/product.html
@@ -8,13 +8,12 @@
 
     <div class="row">
         <alert-cmp [info]="alertInfo"></alert-cmp>
-        <grid-cmp [info]="gridInfo" [data-source]="dataSource" (onExecute)="onExecute($event)">
+        <smartgrid-cmp [info]="gridInfo" [data-source]="dataSource" (onExecute)="onExecute($event)">
             <grid-action-cmp>
-                <button (click)="onAdd()" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i></button>
                 <button (click)="onNavigate('\product-group')" type="button" class="btn btn-default">{{'product.group' | translate}}</button>
                 <button (click)="onNavigate('\product-prices')" type="button" class="btn btn-default">{{'product.prices' | translate}}</button>
             </grid-action-cmp>
-        </grid-cmp>
+        </smartgrid-cmp>
     </div>
     <div class="row">
         <a class="btn btn-default btn-back" *ngIf="canNavigateBack()" (click)="onBack()"><i class="glyphicon glyphicon-arrow-left"></i></a>
