--- a/shop-online/web-spa-business/src/app/shared/form/field/field.html
+++ b/shop-online/web-spa-business/src/app/shared/form/field/field.html
@@ -1,5 +1,5 @@
 <div *ngIf="info.visible" [attr.disabled]="!info.enabled" class="form-group" [class.required]="info.required">
-    <label class="control-label">{{ info.label | translate}}</label>
+    <label *ngIf="!info.isSingle" class="control-label">{{ info.label | translate}}</label>
     <ng-content></ng-content>
 
     <div *ngIf="info.hasError()" class="alert alert-danger">
