--- a/shop-online/web-spa-business/src/app/shared/form/field/textarea.html
+++ b/shop-online/web-spa-business/src/app/shared/form/field/textarea.html
@@ -1,3 +1,3 @@
 <form-field-cmp [info]="info" [fieldModel]="fieldModel">
-    <textarea rows="3" class="form-control" onClick="this.select();" [ngModel]="fieldModel" (ngModelChange)="updateData($event)" name="info.name" [minlength]="info.minlength" [maxlength]="info.maxlength"></textarea>
+    <textarea rows="3" class="form-control" onClick="this.select();" [ngModel]="fieldModel" (ngModelChange)="updateData($event)" name="info.name" [minlength]="info.minlength" [maxlength]="info.maxlength" [autofocus]="info.autofocus"></textarea>
 </form-field-cmp>
