--- a/shop-online/web-spa-business/src/app/warehouse/warehouse.html
+++ b/shop-online/web-spa-business/src/app/warehouse/warehouse.html
@@ -2,23 +2,15 @@
     <!-- page header -->
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{ 'warehouse.title.warehouse' | translate}}</h1>
+            <h1 class="page-header">{{ 'warehouse.list.title' | translate}}</h1>
         </div>
     </div>
 
-
-    <!-- page content -->
-    
-
     <div class="row">
-        <grid-cmp [info]="gridInfo" [data-source]="dataSource" (onExecute)="onExecute($event)">
-            <grid-action-cmp>
-                <button (click)="onAdd()" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i></button>
-                <button (click)="onNavigate('')" type="button" class="btn btn-default">{{'warehouse.list.warehouse' | translate}}</button>
-            </grid-action-cmp>
-        </grid-cmp>
+        <alert-cmp [info]="alertInfo"></alert-cmp>
+        <smartgrid-cmp [info]="gridInfo" [data-source]="dataSource" (onExecute)="onExecute($event)"></smartgrid-cmp>
     </div>
     <div class="row">
-        <a class="btn btn-default" (click)="onBack()"><i class="glyphicon glyphicon-arrow-left"></i></a>
+        <a class="btn btn-default btn-back" *ngIf="canNavigateBack()" (click)="onBack()"><i class="glyphicon glyphicon-arrow-left"></i></a>
     </div>
 </wrapper>
