--- a/shop-online/web-spa-business/src/app/warehouse/returns/returns.html
+++ b/shop-online/web-spa-business/src/app/warehouse/returns/returns.html
@@ -2,7 +2,7 @@
     <!-- page header -->
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{ 'warehouse.import.title' | translate}}</h1>
+            <h1 class="page-header">{{ 'warehouse.returns.title' | translate}}</h1>
         </div>
     </div>
 
@@ -11,20 +11,17 @@
         <div class="col-xs-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <button type="button" class="btn btn-default" (click)="navigateTo(['\warehouse-history', 'import'])">{{'warehouse.import.history'|translate}}</button>
+                    <button type="button" class="btn btn-default" (click)="navigateTo(['\warehouse-history', 'returns'])">{{'warehouse.returns.history'|translate}}</button>
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
                     <div class="col-xs-12">
                         <div class="row">
                             <div class="col-md-4">
-                                <text-field-cmp [info]="formInfo.getField('referenceNo')" [(fieldModel)]="model['referenceNo']"></text-field-cmp>
+                                <cmb-field-cmp [info]="formInfo.getField('warehouseId')" [(fieldModel)]="model['warehouseId']"></cmb-field-cmp>
                             </div>
                             <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="employee">{{'warehouse.import.employee'|translate}}</label>
-                                    <input type="text" class="form-control" id="employee" [ngModel]="getCurrentUser()['employeeName']" disabled>
-                                </div>
+                                <cmb-field-cmp [info]="formInfo.getField('employeeId')" [(fieldModel)]="model['employeeId']"></cmb-field-cmp>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
@@ -33,16 +30,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="row">
-                            <div class="col-md-6">
-                                <cmb-field-cmp [info]="formInfo.getField('warehouseId')" [(fieldModel)]="model['warehouseId']"></cmb-field-cmp>
-                            </div>
-                            <div class="col-md-6">
-                                <smartcmb-field-cmp [info]="formInfo.getField('supplier')" [(fieldModel)]="model['supplier']"></smartcmb-field-cmp>
-                            </div>
-                        </div>
-
                         <div class="row">
                             <gridinput-cmp [info]="gridInfo" (onExecute)="onExecute($event)"></gridinput-cmp>
                         </div>
