--- a/shop-online/web-spa-business/src/app/warehouse/transfer/transfer.html
+++ b/shop-online/web-spa-business/src/app/warehouse/transfer/transfer.html
@@ -2,7 +2,7 @@
     <!-- page header -->
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{ 'warehouse.returns.title' | translate}}</h1>
+            <h1 class="page-header">{{ 'warehouse.transfer.title' | translate}}</h1>
         </div>
     </div>
 
@@ -11,23 +11,28 @@
         <div class="col-xs-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <button type="button" class="btn btn-default" (click)="navigateTo(['\warehouse-history', 'import_returns'])">{{'warehouse.returns.history'|translate}}</button>
+                    <button type="button" class="btn btn-default" (click)="navigateTo(['\warehouse-history', 'transfer'])">{{'warehouse.transfer.history'|translate}}</button>
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
                     <div class="col-xs-12">
                         <div class="row">
-                            <div class="col-md-4">
-                                <cmb-field-cmp [info]="formInfo.getField('warehouseId')" [(fieldModel)]="model['warehouseId']"></cmb-field-cmp>
-                            </div>
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <cmb-field-cmp [info]="formInfo.getField('employeeId')" [(fieldModel)]="model['employeeId']"></cmb-field-cmp>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="curentDate">{{'warehouse.import.curentDate'|translate}}</label>
                                     <input type="text" class="form-control" id="curentDate" [ngModel]="currentDate | date:'dd/MM/yyyy hh:mm:ss'" disabled>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <cmb-field-cmp [info]="formInfo.getField('warehouseId')" [(fieldModel)]="model['warehouseId']"></cmb-field-cmp>
+                            </div>
+                            <div class="col-md-6">
+                                <cmb-field-cmp [info]="formInfo.getField('customer')" [(fieldModel)]="model['customer']"></cmb-field-cmp>
                             </div>
                         </div>
                         <div class="row">
